# vocal-gate

./: .gitignore  README.md  build_mac_pkg.sh  installer.iss
.github/actions/fetch-onnx/: action.yml
.github/workflows/: main.yml  release.yml
ml_pipeline/: check_labels.py  dataset.py  detector.py  evaluate.py  export_dsp_constants.py  export_onnx.py  model.py  plots.py  prepare_data.py  prune.py  requirements.txt  train.py
plugin/: CMakeLists.txt  vocalgate_int8.onnx
plugin/Source/: AudioFIFO.h  BackgroundMLThread.cpp  BackgroundMLThread.h  DSPConstants.h  EmaRmsTracker.h  FeatureExtractor.cpp  FeatureExtractor.h  GateDSP.cpp  GateDSP.h  InferenceEngine.cpp  InferenceEngine.h  ParameterManager.cpp  ParameterManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/onnxruntime/: GIT_COMMIT_ID
tests/CPP/: test_main.cpp
tests/Python/: test_model.py
